--- a/src/components/boxEspecialidade.css
+++ b/src/components/boxEspecialidade.css
@@ -7,14 +7,46 @@
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+    font-family: 'Montserrat', sans-serif;
     margin-top: 15px;
 }
 .box-container img {
     max-width: 70px;
     max-height: 100px;
+    
 }
 .box-container p {
     margin-top: 10px;
     font-size: 18px;
     color: white;
+}
+
+.box-container:hover {
+    border: 1px solid #d6c015;
+    transition: 0.5s;
+    animation: movebox 1s infinite;
+}
+
+
+@keyframes movebox {
+    0% { margin-top: 10px; }
+    50% {margin-top: 15px}
+    100%{margin-top: 10px}
+  }
+
+@media(max-width: 500px){
+    .box-container {
+        width: 290px;
+        height: 290px;
+        margin-top: 30px;
+    }
+
+    .box-container img {
+        max-width: 170px;
+        height: 200px;
+    }
+
+    .box-container p {
+        font-size: 22px;
+    }
 }
