--- a/src/pages/especialidades/especialidades.css
+++ b/src/pages/especialidades/especialidades.css
@@ -1,5 +1,6 @@
 .container-especialidades{
-    background-color: #0B003D;
+    background-color:#120452;
+    
 }
 .content-boxes {
     padding: 50px 0px;
@@ -8,4 +9,13 @@
     flex-wrap: wrap;
     max-width: 800px;
     margin: 0 auto;
+  
 }
+.title-especialidades{
+   color: #D6C015;
+   text-align: center;
+   padding-top: 50px;
+   font-size: 32px;
+}
+
+
