--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -9,10 +9,13 @@
     align-items: center;
     max-width: 1100px;
     margin: 0 auto;
-    padding-bottom: 101px;
+    padding-bottom: 102px;
 }
 
 /* Text */
+.apresentation-text {
+    height: 235px;
+}
 .apresentation-text .hello,
 .apresentation-text span {
     color: #F2DC33;
@@ -45,7 +48,6 @@
     font-size: 16px;
     width: 400px;
     padding-top: 10px;
-    max-width: 100%;
     margin: 0 auto;
     line-height: 1.6;
 }
